@@ -43,9 +43,7 @@ import org.openide.filesystems.FileObject;
 import java.util.logging.Logger;
 import java.util.logging.Level;
 import org.netbeans.api.progress.ProgressHandle;
-import java.io.BufferedReader;
 import java.util.concurrent.Callable;
-import java.util.concurrent.CountDownLatch;
 import org.netbeans.api.project.ProjectInformation;
 import org.netbeans.modules.groovy.grails.api.ExecutionSupport;
 import org.netbeans.modules.groovy.grails.api.GrailsProjectConfig;
@@ -66,10 +64,7 @@ public class NewArtifactWizardIterator implements  WizardDescriptor.Instantiatin
     
     private transient WizardDescriptor wiz;
     
-    BufferedReader procOutput = null;
     GetArtifactNameStep pls = null;
-    ProgressHandle handle = null;
-    CountDownLatch serverFinished = new CountDownLatch(1);
     boolean        serverRunning = false;
     boolean        serverConfigured = true;
     GrailsProject project;
@@ -118,9 +113,6 @@ public class NewArtifactWizardIterator implements  WizardDescriptor.Instantiatin
     } 
        
    public Set instantiate(ProgressHandle handle) throws IOException {
-        
-            this.handle = handle;
-
             Set<FileObject> resultSet = new HashSet<FileObject>();
             
             serverRunning = true;
@@ -187,7 +179,7 @@ public class NewArtifactWizardIterator implements  WizardDescriptor.Instantiatin
         
         if (c instanceof JComponent) { // assume Swing components
             JComponent jc = (JComponent)c;
-            jc.putClientProperty("WizardPanel_contentSelectedIndex", new Integer(1)); // NOI18N
+            jc.putClientProperty("WizardPanel_contentSelectedIndex", Integer.valueOf(1)); // NOI18N
             jc.putClientProperty("WizardPanel_contentData", new String[] { wizardTitle }  ); // NOI18N
             }
         
@@ -203,7 +195,7 @@ public class NewArtifactWizardIterator implements  WizardDescriptor.Instantiatin
 
     public String name() {
         return MessageFormat.format (NbBundle.getMessage(NewArtifactWizardIterator.class,"LAB_IteratorName"),
-            new Object[] {new Integer (1), new Integer (1) });      
+            new Object[] {Integer.valueOf(1), Integer.valueOf(1)});
     }
 
     public boolean hasNext() {
